[package]
name = "GoToCC"
version = "0.1.0"
authors = ["rylm <danilov.sasha444@gmail.com>"]

[dependencies]
iron = "0.5.1"
bodyparser = "0.7.0"
router = "0.5.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
exonum = "0.1.0"

[patch.crates-io]
exonum = { path = "../../../exonum_fork/exonum/exonum" }